--- a/eksctl.yml
+++ b/eksctl.yml
@@ -10,3 +10,6 @@ managedNodeGroups:
     instanceType: m5.large
     desiredCapacity: 3
     spot: true
+    ssh:
+      allow: true
+      publicKeyName: windows
